# oj-vibe-coding

./: .gitignore  CMakeLists.txt  DEPLOY.md  Question.md  README.md  SPEC.md  dependence.txt
config/: config.yaml
docs/: SPEC.md  acceptance_report.md  web_testcase.md  web自动化测试文档-playwright-cli.md
scripts/: init_db.sql  repeat_submit.py
src/: main.cpp  router.cpp  router.h  server.cpp  server.h
src/db/: mysql_pool.cpp  mysql_pool.h
src/db/dao/: language_dao.cpp  language_dao.h  problem_dao.cpp  problem_dao.h  submission_dao.cpp  submission_dao.h  test_case_dao.cpp  test_case_dao.h  user_dao.cpp  user_dao.h
src/handler/: admin_handler.cpp  admin_handler.h  auth_handler.cpp  auth_handler.h  handler_base.h  problem_handler.cpp  problem_handler.h  submission_handler.cpp  submission_handler.h
src/judge/: judge_executor.h  judge_manager.cpp  judge_manager.h  judge_worker_balancer.h  judge_worker_server.cpp  judger_cli.cpp  sandbox_preload.cpp  sandbox_runner.cpp  sandbox_runner.h
src/middleware/: auth.cpp  auth.h
src/model/: language.cpp  language.h  problem.cpp  problem.h  submission.cpp  submission.h  test_case.cpp  test_case.h  user.cpp  user.h
src/net/: http.hpp  muduo.hpp  router.cpp  router.h
src/server/: server.cpp  server.h
src/utils/: config.cpp  config.h  crypto.cpp  crypto.h  json_helper.cpp  json_helper.h  logger.cpp  logger.h
tests/: security_acceptance_test.cpp  test_api.py
tests/db/: dao_integration_test.cpp
tests/frontend/: api_smoke_check.sh  frontend_display_test_cases.md  load_seed_data.sh  seed_frontend_data.sql
tests/handler/: admin_handler_api_test.cpp  problem_submission_api_test.cpp  router_test.cpp
tests/judge/: judge_worker_balancer_test.cpp  judger_cli_test.cpp  judger_cli_timeout_test.cpp
tests/middleware/: auth_test.cpp
tests/model/: model_json_test.cpp
tests/perf/: perf_test.py
tests/support/: http_test_client.h
tests/utils/: config_test.cpp  crypto_test.cpp  json_helper_test.cpp  logger_test.cpp
tools/: register_admin  register_admin.cpp  reset_web_data  reset_web_data.cpp
web/: index.html
web/css/: style.css
web/js/: api.js  app.js  utils.js
web/js/components/: editor.js  history.js  login.js  problem-detail.js  problem-list.js  submission-result.js
web/js/components/admin/: dashboard.js  language-config.js  problem-edit.js
web/lib/monaco/: README.md
web/pages/: history.html  login.html  problem-detail.html  problem-list.html  register.html  submission-result.html
web/pages/admin/: dashboard.html  language-config.html  problem-edit.html
